# orthodb-cli

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: design.md  homebrew.md  release.md
scripts/: committer
src/orthodb_cli/: __init__.py  cache.py  cli.py  client.py  db.py  errors.py  identify.py  local.py
tests/: test_cache.py  test_client.py  test_db.py  test_identify.py
